--- a/Guts/index.html
+++ b/Guts/index.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Placeholder Project Title</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+        <div class="topnav">
+                <a class="active" href="#index">Index</a>
+                <a href="#viz1">Visualization 1</a>
+                <a href="#viz2">Visualization 2</a>
+                <a href="#viz3">Visualization 3</a>
+                <a href="#viz4">Visualization 4</a>
+        </div>
     <h1>This is where the project title goes</h1>
 
     <h2>This is the visualization title</h2>
