--- a/Guts/comps.html
+++ b/Guts/comps.html
@@ -6,7 +6,24 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="topnav">
+        <a href="#index">Index</a>
+        <a class = "active" href="comps.html">Comparisons</a>
+        <a href="data.html">Data</a>
+        <a href="links.html">Links</a>
 
+    </div>
+    <div>
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+              <h1>Comparison Vizualizations</h1> 
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, fugit accusantium. Vero, nisi hic odio sunt doloremque enim ducimus veniam fugit quos ipsa aut id quo corrupti mollitia alias fugiat.</p> 
+            </div>
+          </div>
+    </div>
+<h1></h1>
+
+<h2>This is the visualization title</h2>
 
 
 </body>
