--- a/Guts/index.html
+++ b/Guts/index.html
@@ -9,16 +9,20 @@
 </head>
 
 <body>
-        <div class="topnav">
-                <a class="active" href="#index">Index</a>
-                <a href="#viz1">Visualization 1</a>
-                <a href="#viz2">Visualization 2</a>
-                <a href="#viz3">Visualization 3</a>
-                <a href="#viz4">Visualization 4</a>
+    <div class="topnav">
+        <a class = "active" href="index.html">Index</a>
+        <a href="comps.html">Comparisons</a>
+        <a href="data.html">Data</a>
+    <a href="links.html">Links</a>
+    </div>
+    <div>
+        <div>
+            <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                    <h1>Home</h1> 
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, fugit accusantium. Vero, nisi hic odio sunt doloremque enim ducimus veniam fugit quos ipsa aut id quo corrupti mollitia alias fugiat.</p> 
+                </div>
+            </div>
         </div>
-    <h1>This is where the project title goes</h1>
-
-    <h2>This is the visualization title</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, blanditiis in adipisci molestiae labore vitae harum dicta totam possimus tempora pariatur, dolore consequuntur. Accusantium sapiente doloribus asperiores mollitia quos ut.</p>
 </body>
 </html>
